--- a/package.json
+++ b/package.json
@@ -10,27 +10,26 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "animejs": "^2.2.0",
     "babel-preset-env": "^1.7.0",
     "babelify": "^8.0.0",
     "browser-sync": "^2.23.5",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "browserify": "^16.2.3",
+    "gulp": "^4.0.0",
     "gulp-autoprefixer": "^4.1.0",
     "gulp-babel": "^7.0.1",
     "gulp-csso": "^3.0.1",
     "gulp-ejs": "^3.1.3",
+    "gulp-gzip": "^1.4.2",
+    "gulp-html-beautify": "^1.0.1",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^4.1.0",
-    "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.3",
     "gulp-uglify": "^3.0.0",
-    "jquery": "^3.3.1",
-    "mixitup": "^3.3.0",
     "vinyl-buffer": "^1.0.1"
   },
   "dependencies": {
     "babel-core": "^6.26.3",
-    "browserify": "^16.2.2",
     "vinyl-source-stream": "^2.0.0"
   }
 }
